remove method from resource accessor. update code and tests. add mock helpers. add logging.